padding to fix a goofy spacing issue on mozilla due to new menu drop down
git-svn-id: https://free2.projectlocker.com/riverhills/moodle/svn/trunk@51 1ff7bc8b-0ae6-490c-ae3b-7ac585c1b48c

--- a/theme/riverhills-old/mods.css
+++ b/theme/riverhills-old/mods.css
@@ -7,6 +7,10 @@ body {
     border-top: 2px solid #320000;
 }
 
+#content {
+    padding-top: 5px;
+}
+
 .navbar {
     background-color: #320000;
     border: 0px;
